--- a/lesson-18/views/users/index.ejs
+++ b/lesson-18/views/users/index.ejs
@@ -21,9 +21,17 @@
           </tr>
         </thead>
         <tbody>
-          <!-- 
-            @TODO: 뷰에서 사용자 배열 루핑 탐색 
-          -->
+          <% users.foreEach(function(user) { %>
+            <tr>
+              <td><%= user.username %></td>
+              <td><%= user.fullname %></td>
+              <td><%= user.email %></td>
+              <td>
+                <a href="/users/<%= user.id %>/edit">Edit</a>
+                <a href="/users/<%= user.id %>/delete">Delete</a>
+              </td>
+            </tr>
+          <% }); %>
         </tbody>
       </table>
 
